src/test/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:17:5
   |
LL |     a.I
   |     ^--
   |     |
   |     did you mean `a::I`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:22:5
   |
LL |     a.g()
   |     ^----
   |     |
   |     did you mean `a::g(...)`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:27:5
   |
LL |     a.b.J
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:32:5
   |
LL |     a::b.J
   |     ^^^---
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::J`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:37:5
   |
LL |     a.b.f();
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:40:12
   |
LL |     v.push(a::b);
   |            ^^^-
   |               |
   |               did you mean `I`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:45:5
   |
LL |     a::b.f()
   |     ^^^-----
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::f(...)`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:50:5
   |
LL |     a::b
   |     ^^^-
   |        |
   |        did you mean `I`?

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:55:5
   |
LL |     a::b()
   |     ^^^-
   |        |
   |        did you mean `I`?

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0423`.
